page d'accueil finalisé

--- a/a-propos.html
+++ b/a-propos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Accueil - Robbie Lens Photographie</title>
+    <title>Document</title>
 </head>
 <body>
+
+
 
     <header class="top">
         <nav>
@@ -25,43 +27,24 @@
     </header>
 
     <main>
+        <section class="middle">
+            <h1>A propos de Robbie Lens</h1>
+            <p>Photographe <em class="pro">profesionnelle</em> depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication. Créativité, qualité, et sérénité pour vous ! Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
 
-        <section class="middle-deux">
-            <div class="info">
-                <h1>Robbie Lens <br> Photographie</h1>                <p>Où professionalisme s’allie avec passion. <br>Depuis plus de 5 ans maintenant, j’exerce <br> mon métier avec la passion qui m’anime : <br>capturer l’essence de chaque instant.</p>
-            </div>
-            <div>
-                <img src="images/robbie-lens.png" alt="photo Robbie">
-                <img src="images/accueil/Union.png" alt="" class="bordure">
-            </div>
-        </section>
-
-
-        <section>
-
-            <h2>Mon dernier projet</h2>
-            <div class="container">
-                <div class="photo"><img src="images/accueil/element-1.png" alt=""></div>
-                <div class="photo"><img src="images/accueil/element-2.png" alt=""></div>
-                <div class="photo"><img src="images/accueil/element-3.png" alt=""></div>
-            </div>
-            <div class="container deux">
-                <div class="photo"><img src="images/accueil/element-4.png" alt=""></div>
-                <div class="photo"><img src="images/accueil/element-5.png" alt=""></div>
-                <div class="photo"><img src="images/accueil/element-6.png" alt=""></div>
-            </div>
-
-            <div class="button">
-                <a href="#" class="write">Un projet ? Ecrivez moi</a><br>
-            </div>
+            <h3>Services</h3>
+            <ul>
+                <li>Portrait seul ou à plusieurs,</li>
+                <li>Shooting mode,</li>
+                <li>Retouches sur mesure,</li>
+                <li>Développement. </li>
+            </ul>
 
         </section>
-
-
-
     </main>
 
-
+    <div>
+        <a href="#" class="watch">Voir mon portfolio</a>
+    </div><br>
 
 
 
