modification et ajout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -14,13 +14,14 @@
 </head>
 <body>
 
-    <header class="top">
+    <header>
         <nav>
         <img src="images/logo.png" alt="logo du site" class="logo">   
         <a href="index.html" class="back">Accueil</a>
         <a href="a-propos.html" class="back">A propos</a>
-        <a href="a-propos.html" class="back">Tarif</a>
-        <a href="a-propos.html" class="back">Portfolio</a>
+        <a href="tarifs.html" class="back">Tarifs</a>
+        <a href="portfolio.html" class="back">Portfolio</a>
+
         </nav>
     </header>
 
@@ -28,8 +29,12 @@
 
         <section class="middle-deux">
             <div class="info">
-                <h1>Robbie Lens <br> Photographie</h1>                <p>Où professionalisme s’allie avec passion. <br>Depuis plus de 5 ans maintenant, j’exerce <br> mon métier avec la passion qui m’anime : <br>capturer l’essence de chaque instant.</p>
+                <h1>Robbie Lens <br> Photographie</h1><p>Où professionalisme s’allie avec passion. <br>Depuis plus de 5 ans maintenant, j’exerce <br> mon métier avec la passion qui m’anime : <br>capturer l’essence de chaque instant.</p>
+                <a href="#contact" class="cta">Un projet ? Ecrivez moi</a><br>
+
             </div>
+
+
             <div>
                 <img src="images/robbie-lens.png" alt="photo Robbie">
                 <img src="images/accueil/Union.png" alt="" class="bordure">
@@ -51,10 +56,11 @@
                 <div class="photo"><img src="images/accueil/element-6.png" alt=""></div>
             </div>
 
-            <div class="button">
-                <a href="#" class="write">Un projet ? Ecrivez moi</a><br>
-            </div>
 
+
+        </section>
+        <section id="contact">
+            <h1>coucou</h1>
         </section>
 
 
