--- a/a-propos.html
+++ b/a-propos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -21,11 +21,11 @@
         <img src="images/logo.png" alt="logo du site" class="logo">   
         <a href="index.html" class="back">Accueil</a>
         <a href="a-propos.html" class="back">A propos</a>
-        <a href="a-propos.html" class="back">Tarif</a>
-        <a href="a-propos.html" class="back">Portfolio</a>
+        <a href="tarifs.html" class="back">Tarifs</a>
+        <a href="portfolio.html" class="back">Portfolio</a>
+
         </nav>
     </header>
-
     <main>
         <section class="middle">
             <h1>A propos de Robbie Lens</h1>
