ajout autres pages : fin

--- a/a-propos.html
+++ b/a-propos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/a-propos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -26,21 +26,41 @@
 
         </nav>
     </header>
+
     <main>
-        <section class="middle">
-            <h1>A propos de Robbie Lens</h1>
-            <p>Photographe <em class="pro">profesionnelle</em> depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication. Créativité, qualité, et sérénité pour vous ! Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
+        <section class="section-apropos-portfolio">
+            <div class="galerie-portrait">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+                <img src="images/robbie-lens.png" alt="" class="photo-robbielens">
+            </div>
 
-            <h3>Services</h3>
-            <ul>
-                <li>Portrait seul ou à plusieurs,</li>
-                <li>Shooting mode,</li>
-                <li>Retouches sur mesure,</li>
-                <li>Développement. </li>
-            </ul>
+            <h2>A propos</h2>
+            <div class="contenu-apropos">
+                <p>Photographe depuis plus de 5 ans, je réalise des reportages aux  <br>photos dynamiques et pertinentes pour vos projets de <br> communication. Créativité, qualité, et sérénité pour vous! Je gère <br> tout, depuis la direction artistique, la réalisation du reportage jusqu’à <br> la livraison de vos photos retouchées, prêtes à l’emploi.</p><br>
+                <h3>Services</h3>
+                <ul>
+                    <li>Portrait seul ou à plusieurs</li>
+                    <li>Shooting mode</li>
+                    <li>Retouches sur mesure</li>
+                    <li>Developpement</li>
+                </ul>
+                <a href="portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
+            </div>
 
+                        <div class="carre">
+            </div>
+            
         </section>
     </main>
+
 
     <div>
         <a href="#" class="watch">Voir mon portfolio</a>
