--- a/index.html
+++ b/index.html
@@ -59,8 +59,27 @@
 
 
         </section>
-        <section id="contact">
-            <h1>coucou</h1>
+        <section id="contact" class="section-contact">
+            <h2 class="titre-contact">Parlons de vos projets</h2>
+            <form action="" method="get">
+                    <div class="form-nom-email">
+                        <div class="form-column">
+                            <label for="nom">Nom</label>
+                            <input type="text" name="nom" id="nom" placeholder="Ex: Joe" autofocus required>
+                        </div>
+                        <div class="form-column">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" placeholder="Ex: john.doe@xxx.com" required>
+                        </div>
+                    </div>
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea>
+                    <input type="submit" value="Envoyer" class="submit">
+                    
+
+
+
+            </form>
         </section>
 
 
